2003-08-27  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_set_visuals):
	work-around a deadlock when unwiring the post plugin with the xine
	engine paused

2003-08-26  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: removed ICON_PATH from the CFLAGS
	* src/bacon-video-widget-gst.c: (bacon_video_widget_class_init),
	(bacon_video_widget_open), (bacon_video_widget_get_speed),
	(bacon_video_widget_set_visuals),
	(bacon_video_widget_set_visuals_quality),
	(bacon_video_widget_get_type): removed useless debug, fixed runtime
	warning
	* src/bacon-video-widget-xine.c: (bacon_video_widget_get_type),
	(bacon_video_widget_class_init),
	(bacon_video_widget_instance_init), (bacon_video_widget_finalize),
	(frame_output_cb): removed unused icon private member
	* src/bacon-video-widget.h: make the video widget descend from a
	GtkBox instead of a GtkVBox

2003-08-26  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-cd-selection.h: upd from libbacon

2003-08-07  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: s/langage/language/ (Closes: #119295)

2003-08-06  Metin Amiroff <metin@karegen.com>

	* configure.in: Added "az" (Azerbaijani) to ALL_LINGUAS

2003-08-03  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-resize.c:
	* src/bacon-resize.h: change the headers to reflect the LGPL
	copyright

2003-08-03  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-resize.c: (bacon_resize): make sure that the resizing
	works even when the resolutions from XRandR aren't sorted

2003-08-03  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>

	* configure.in: Added "cy" (Welsh) to ALL_LINGUAS

2003-08-02  Bastien Nocera  <hadess@hadess.net>

	* data/totem.applications: added startup notify key so that Nautilus
	can give us an hourglass when opening a file

2003-08-02  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/totem-playlist.c: (totem_playlist_add_directory): fix recursive
	directory loading when a unix local path is passed
