@@ -1,3 +1,9 @@
+2003-08-28  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
+	* src/totem-preferences.c: (on_button1_clicked):
+	Use Konqueror instead of nautilus if running under KDE.
+	Run nautilus with --no-desktop to prevent it from managing desktop.
+
 2003-08-27  Bastien Nocera  <hadess@hadess.net>
 
 	* src/bacon-video-widget-xine.c: (bacon_video_widget_set_visuals):
